--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,6 @@
 
 @layer components {
     .button {
-        @apply h-5 w-5;
+        @apply h-5 w-5 cursor-pointer hover:scale-125 transition transform duration-100 ease-out;
     }
 }
